--- a/sections/Analysis_Background.tex
+++ b/sections/Analysis_Background.tex
@@ -353,7 +353,7 @@ Figures \ref{fig:VRNonPromptComposition} show the non-prompt composition in the 
 
 The fake backgrounds for the validation regions are estimated by applying the fake factor to each baseline-anti-signal leptons in the not-signal quadruplet, as discussed in Section \ref{subsubsec:EstimationStrategy}. Figure \ref{subfig:VRDFMCRed} shows the data and the predicted MC yield in VRDF as a function of $m_{4\ell}$ where the fake backgrounds are estimated from $Z+jets$, $t\bar{t}$, and $WZ$ MC predictions. Figure \ref{subfig:VRDFFF} shows the same but the reducible estimated using the fake factor method. Similarly, figures \ref{subfig:VRSCMCRed} and \ref{subfig:VRSCFF} show the yields as a function of $m_{4\ell}$ in the same charge validation region. Both regions have similar characteristics, and the fake background dominates the event yield with some contribution from other physics processes.
 
-The systematic gray bands in figures \ref{subfig:VRDFFF} and \ref{subfig:VRSCFF} include the systematic and statistical uncertainties from the fake factor method, as well as the uncertainties on PDF, QCD scale, and strong coupling ($\alpha_{S}$) on the $qqZZ,~qqZZjj~\&~ggZZ$ MC prediction. The bands also include the uncertainties in the cross-section measurements of the $ttZ$ and $VVV$ processes. The treatment of the systematic theoretical uncertainties is the same as that of the signal region and will be discussed in Section \ref{sec:TheoryUnc}. Other experimental uncertainties related to the lepton reconstruction and identification, trigger, and luminosity discussed in Section \ref{sec:ExpUnc} are assumed to be negligible for the validation regions. For most bins, the data and MC yield are compatible with both regions' systematic and statistical uncertainties. Moreover, the agreement between data and MC simulation is better when the reducible events are estimated using the fake factor method, thus, fully validating the method.
+The systematic gray bands in figures \ref{subfig:VRDFFF} and \ref{subfig:VRSCFF} include the systematic and statistical uncertainties from the fake factor method, as well as the uncertainties on PDF, QCD scale, and strong coupling ($\alpha_{S}$) on the $qqZZ,~qqZZjj~\&~ggZZ$ MC prediction. The bands also include the uncertainties in the cross-section measurements of the $ttZ$ and $VVV$ processes. The treatment of the systematic theoretical uncertainties is the same as that of the signal region and will be discussed in Section \ref{subsec:TheoryUnc}. Other experimental uncertainties related to the lepton reconstruction and identification, trigger, and luminosity discussed in Section \ref{subsec:ExpUnc} are assumed to be negligible for the validation regions. For most bins, the data and MC yield are compatible with both regions' systematic and statistical uncertainties. Moreover, the agreement between data and MC simulation is better when the reducible events are estimated using the fake factor method, thus, fully validating the method.
 
 \begin{figure}[htb]
     \centering
@@ -430,18 +430,18 @@ The data and MC yield comparisons for several kinematic observables in VRDF (lef
 
 \subsubsection{Signal Region Estimation}
 \label{subsubsec:SREstimation}
-Similar to the validation regions, the background in the signal region is estimated by applying the fake factor to the not-signal quadruplets, as discussed in section \ref{subsubsec:EstimationStrategy}. Distributions in figure \ref{fig:MCFFRedComparison} compare the fake background predicted from MC and estimated from the fake-factor method in the VBS enhanced signal events as a function of $\mFourL$ (left) and $\ptFourL$ (right). Figure \ref{fig:MCFFRedStack} shows identical distributions but also includes the total SM prediction in the same region. The lower panel of the plot shows the fake background to the predicted signal ratio, which is small. The gray bands in the plots are from systematic uncertainties of the fake factor method, whose effect is negligible on the overall yield of the signal region.
+Similar to the validation regions, the background in the signal region is estimated by applying the fake factor to the not-signal quadruplets, as discussed in section \ref{subsubsec:EstimationStrategy}. Distributions in figure \ref{fig:MCFFRedComparison} compare the fake background predicted from MC and estimated from the fake-factor method in the VBS-Enhanced signal events as a function of $\mFourL$ (left) and $\ptFourL$ (right). Figure \ref{fig:MCFFRedStack} shows identical distributions but also includes the total SM prediction in the same region. The lower panel of the plot shows the fake background to the predicted signal ratio, which is small. The gray bands in the plots are from systematic uncertainties of the fake factor method, whose effect is negligible on the overall yield of the signal region.
 
 \begin{figure}[htb]
     \centering
     \includegraphics[width=0.48\textwidth]{figures/Analysis/Background/MCRedCompare_VBS_Enhanced_M4l.pdf}
     \includegraphics[width=0.48\textwidth]{figures/Analysis/Background/MCRedCompare_VBS_Enhanced_Pt4l.pdf}
-    \caption{ MC prediction and fake-factor method estimate of the fake background as a function of $\mFourL$(left) and $\ptFourL$ (right) in the VBS enhanced region. Black bands represent the systematic uncertainties from the fake factor method. \textcolor{red}{remake plots with ATLAS Label and cleaning other labels} \label{fig:MCFFRedComparison}}
+    \caption{ MC prediction and fake-factor method estimate of the fake background as a function of $\mFourL$(left) and $\ptFourL$ (right) in the VBS-Enhanced region. Black bands represent the systematic uncertainties from the fake factor method. \textcolor{red}{remake plots with ATLAS Label and cleaning other labels} \label{fig:MCFFRedComparison}}
 \end{figure}
 
 \begin{figure}[htb]
     \centering
     \includegraphics[width=0.48\textwidth]{figures/Analysis/Background/RedStack_VBSEnhanced_M4l.pdf}
     \includegraphics[width=0.48\textwidth]{figures/Analysis/Background/RedStack_VBSEnhanced_Pt4l.pdf}
-    \caption{ SM prediction and fake background estimated from the fake-factor method as a function of $\mFourL$(left) and $\ptFourL$ (right) in the VBS enhanced region. Black bands represent the systematic uncertainties from the fake factor method, which are negligible on the full signal region distribution. \textcolor{red}{remake plots with ATLAS Label, cleaning other label and y-xis/ratio-axis title} \label{fig:MCFFRedStack} }
+    \caption{ SM prediction and fake background estimated from the fake-factor method as a function of $\mFourL$(left) and $\ptFourL$ (right) in the VBS-Enhanced region. Black bands represent the systematic uncertainties from the fake factor method, which are negligible on the full signal region distribution. \textcolor{red}{remake plots with ATLAS Label, cleaning other label and y-xis/ratio-axis title} \label{fig:MCFFRedStack} }
 \end{figure}
