--- a/sections/Analysis_EventSelection.tex
+++ b/sections/Analysis_EventSelection.tex
@@ -34,8 +34,8 @@ A dijet in an event is selected by requiring two signal jets defined in section 
 					& Dijet 		& Both jets required to pass either JVT or FJVT 							\\
 		\hline  
 							
-		Event				& VBS Enhanced Region 		& signal quadruplet $\&$ dijet and centrality ($\zeta) < 0.4 $				\\
-		Categorisation			& VBS Suppressed Region 	& signal quadruplet $\&$ dijet and centrality ($\zeta) > 0.4$				\\
+		Event				& VBS-Enhanced Region 		& signal quadruplet $\&$ dijet and centrality ($\zeta) < 0.4 $				\\
+		Categorisation			& VBS-Suppressed Region 	& signal quadruplet $\&$ dijet and centrality ($\zeta) > 0.4$				\\
 		
 		\hline
 	\end{tabular}
