--- a/sections/Analysis_Systematics.tex
+++ b/sections/Analysis_Systematics.tex
@@ -1,6 +1,6 @@
 
-\section{Theoretical Uncertainties}
-\label{sec:TheoryUnc}
+\subsection{Theoretical Uncertainties}
+\label{subsec:TheoryUnc}
 
-\section{Experimental Uncertainties}
-\label{sec:ExpUnc}
+\subsection{Experimental Uncertainties}
+\label{subsec:ExpUnc}
