--- a/thesis.tex
+++ b/thesis.tex
@@ -156,11 +156,10 @@ Dr. Alessandro Tricoli, Brookhaven National Laboratory
 \bibliographystyle{unsrt}
 \clearpage
 }
-\addcontentsline{toc}{part}{Appendices}
 \begin{appendices}
     \part*{Appendices}
+	\include{sections/Appendix}
 \end{appendices}
-
 
 \end{document}
 
